Updating notes to and code to notebook
Updating notes to and code to notebook

--- a/SFL Sagemaker and Pytorch.ipynb
+++ b/SFL Sagemaker and Pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4aee2a40",
+   "id": "5eda5f15",
    "metadata": {},
    "source": [
     "### AWS SageMaker Experiment with MNIST Handwritten Digits Classification\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3929a7e9",
+   "id": "a3a29b22",
    "metadata": {},
    "source": [
     "### Runtime\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b69862",
+   "id": "431e0217",
    "metadata": {},
    "source": [
     "## Install modules\n"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3bbb6f7d",
+   "id": "da4ac0d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bfb406e",
+   "id": "bd488647",
    "metadata": {},
    "source": [
     "## Install the SageMaker Experiments Python SDK"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a151a54c",
+   "id": "ee01bee7",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7670af3",
+   "id": "0d9229f2",
    "metadata": {},
    "source": [
     "## Install PyTorch"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2bd40bfa",
+   "id": "b626cb62",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b018f94",
+   "id": "4ddd7da9",
    "metadata": {},
    "source": [
     "### Setup "
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fc37ba6e",
+   "id": "a2835179",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ecb4c684",
+   "id": "0ecfca1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7098d1cd",
+   "id": "f929a7dc",
    "metadata": {},
    "source": [
     "## Download the dataset\n",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1d4b5c77",
+   "id": "88f3b4f6",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9d403c",
+   "id": "5c8c9f79",
    "metadata": {},
    "source": [
     "View an example image from the dataset."
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "250c8bac",
+   "id": "c56cd729",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf8197a",
+   "id": "4ee92c77",
    "metadata": {},
    "source": [
     "After transforming the images in the dataset, we upload it to S3."
@@ -318,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a47d418e",
+   "execution_count": 18,
+   "id": "263a484f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3268621a",
+   "id": "85f6e010",
    "metadata": {},
    "source": [
     "Now let's track the parameters from the data pre-processing step.\n",
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3b86319b",
+   "execution_count": 19,
+   "id": "68b10e44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8be4d1b4",
+   "id": "5bbfaa91",
    "metadata": {},
    "source": [
     "## Step 1: Set up the Experiment\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eb0f94ef",
+   "id": "5e3ad4a2",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91cc81e",
+   "id": "fab28f6d",
    "metadata": {},
    "source": [
     "### Step 2: Track Experiment\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "49204de3",
+   "id": "57c67394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4f87b4fb",
+   "id": "eba96618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5661d0e1",
+   "id": "e4fdaca3",
    "metadata": {},
    "source": [
     "If you want to run the following five training jobs in parallel, you may need to increase your resource limit. Here we run them sequentially.\n",
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "01d84782",
+   "id": "38782093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3f519809",
+   "execution_count": 28,
+   "id": "e215c240",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1414/1582975501.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0;34m\"TrialComponentDisplayName\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"Training\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         },\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m     )\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_1414/2181035614.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0;34m\"TrialComponentDisplayName\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"training\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         },\n\u001b[0;32m---> 48\u001b[0;31m      \u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m     )\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/amazonei_pytorch_latest_p37/lib/python3.7/site-packages/sagemaker/workflow/pipeline_context.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 209\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mrun_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/amazonei_pytorch_latest_p37/lib/python3.7/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, inputs, wait, logs, job_name, experiment_config)\u001b[0m\n\u001b[1;32m   1002\u001b[0m                 \u001b[0;34m*\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mTrialComponentDisplayName\u001b[0m\u001b[0;31m`\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mused\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdisplay\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mStudio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1003\u001b[0m         \"\"\"\n\u001b[0;32m-> 1004\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prepare_for_training\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1005\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1006\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_TrainingJob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_new\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexperiment_config\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/amazonei_pytorch_latest_p37/lib/python3.7/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36m_prepare_for_training\u001b[0;34m(self, job_name)\u001b[0m\n\u001b[1;32m   2813\u001b[0m                 \u001b[0mconstructor\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mapplicable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2814\u001b[0m         \"\"\"\n\u001b[0;32m-> 2815\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFramework\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prepare_for_training\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2816\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2817\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_and_set_debugger_configs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -511,7 +511,7 @@
     "            \"TrialName\": cnn_trial.trial_name,\n",
     "            \"TrialComponentDisplayName\": \"Training\",\n",
     "        },\n",
-    "        wait=True,\n",
+    "     wait=True,   \n",
     "    )\n",
     "\n",
     "    # Wait two seconds before dispatching the next training job\n",
@@ -519,9 +519,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0621c1ce",
+   "metadata": {},
+   "source": [
+    "## Compare the model training runs for an experiment\n",
+    "Now we use the analytics capabilities of the Experiments SDK to query and compare the training runs for identifying the best model produced by our experiment. You can retrieve trial components by using a search expression.\n",
+    "\n",
+    "### Some Simple Analyses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "446b8285",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_expression = {\n",
+    "    \"Filters\": [\n",
+    "        {\n",
+    "            \"Name\": \"DisplayName\",\n",
+    "            \"Operator\": \"Equals\",\n",
+    "            \"Value\": \"Training\",\n",
+    "        }\n",
+    "    ],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e312e985",
+   "metadata": {},
+   "source": [
+    "To isolate and measure the impact of change in hidden channels on model accuracy, we vary the number of hidden channel and fix the value for other hyperparameters.\n",
+    "\n",
+    "Next let's look at an example of tracing the lineage of a model by accessing the data tracked by SageMaker Experiments for the cnn-training-job-2-hidden-channels trial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "98f9c89a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial_component_analytics = ExperimentAnalytics(\n",
+    "    sagemaker_session=Session(sess, sm),\n",
+    "    experiment_name=mnist_experiment.experiment_name,\n",
+    "    search_expression=search_expression,\n",
+    "    sort_by=\"metrics.test:accuracy.max\",\n",
+    "    sort_order=\"Descending\",\n",
+    "    metric_names=[\"test:accuracy\"],\n",
+    "    parameter_names=[\"hidden_channels\", \"epochs\", \"dropout\", \"optimizer\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8b8451d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trial_component_analytics.dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c86486d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lineage_table = ExperimentAnalytics(\n",
+    "    sagemaker_session=Session(sess, sm),\n",
+    "    search_expression={\n",
+    "        \"Filters\": [\n",
+    "            {\n",
+    "                \"Name\": \"Parents.TrialName\",\n",
+    "                \"Operator\": \"Equals\",\n",
+    "                \"Value\": hidden_channel_trial_name_map[2],\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    sort_by=\"CreationTime\",\n",
+    "    sort_order=\"Ascending\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e3bb2501",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TrialComponentName</th>\n",
+       "      <th>DisplayName</th>\n",
+       "      <th>normalization_mean</th>\n",
+       "      <th>normalization_std</th>\n",
+       "      <th>mnist-dataset - MediaType</th>\n",
+       "      <th>mnist-dataset - Value</th>\n",
+       "      <th>Trials</th>\n",
+       "      <th>Experiments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TrialComponent-2022-07-28-193638-negv</td>\n",
+       "      <td>Preprocessing</td>\n",
+       "      <td>0.1307</td>\n",
+       "      <td>0.3081</td>\n",
+       "      <td>s3/uri</td>\n",
+       "      <td>s3://sagemaker-us-west-2-148596524235/DEMO-mnist</td>\n",
+       "      <td>[cnn-training-job-2-hidden-channels-1659037023...</td>\n",
+       "      <td>[mnist-hand-written-digits-classification-1659...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      TrialComponentName    DisplayName  normalization_mean  \\\n",
+       "0  TrialComponent-2022-07-28-193638-negv  Preprocessing              0.1307   \n",
+       "\n",
+       "   normalization_std mnist-dataset - MediaType  \\\n",
+       "0             0.3081                    s3/uri   \n",
+       "\n",
+       "                              mnist-dataset - Value  \\\n",
+       "0  s3://sagemaker-us-west-2-148596524235/DEMO-mnist   \n",
+       "\n",
+       "                                              Trials  \\\n",
+       "0  [cnn-training-job-2-hidden-channels-1659037023...   \n",
+       "\n",
+       "                                         Experiments  \n",
+       "0  [mnist-hand-written-digits-classification-1659...  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lineage_table.dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26eb0f0a",
+   "metadata": {},
+   "source": [
+    "## Deploy an endpoint for the best training job / trial component\n",
+    "Now we take the best model and deploy it to an endpoint so it is available to perform inference."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852b4679",
+   "id": "1792dc55",
    "metadata": {},
    "outputs": [],
    "source": []
